# BFGSxSIMD

./: .gitignore  README.md  README_AADC.txt  ReadMePullRequest.md  a.out  example-rosenbrock_new.cpp
Final/BFGSxSIMD/Helper/: BfgsHelper.h  CMakeLists.txt  Log.h  Rosenbrock.h  test.cpp  test_comparison.cpp
ORE/ORE_full/: CMakeLists.txt
ORE/ORE_full/App/: CMakeLists.txt  ore.cpp  ore1.cpp
ORE/ORE_full/Examples/Example_3/Input/: ore.xml  portfolio1.xml  portfolio4.xml  portfolioL.xml  portfolioMix.xml  portfolioSwap.xml  simulation.xml  simulationEx2.xml
ORE/ORE_full/Examples/Example_3/Output/: curves.csv  exposure_nettingset_CPTY_A.csv  exposure_trade_Swap_0.csv  exposure_trade_Swap_1.csv  exposure_trade_Swap_10.csv  exposure_trade_Swap_11.csv  exposure_trade_Swap_12.csv  exposure_trade_Swap_13.csv  exposure_trade_Swap_14.csv  exposure_trade_Swap_15.csv  exposure_trade_Swap_16.csv  exposure_trade_Swap_17.csv  exposure_trade_Swap_18.csv  exposure_trade_Swap_19.csv  exposure_trade_Swap_2.csv  exposure_trade_Swap_20.csv  exposure_trade_Swap_21.csv  exposure_trade_Swap_22.csv  exposure_trade_Swap_23.csv  exposure_trade_Swap_24.csv  exposure_trade_Swap_25.csv  exposure_trade_Swap_26.csv  exposure_trade_Swap_27.csv  exposure_trade_Swap_28.csv  exposure_trade_Swap_29.csv  exposure_trade_Swap_3.csv  exposure_trade_Swap_30.csv  exposure_trade_Swap_31.csv  exposure_trade_Swap_32.csv  exposure_trade_Swap_33.csv  (+484 more)
ORE/ORE_full/Examples/Input/: portfolioBond.xml
ORE/ORE_full/OREAnalytics/: CMakeLists.txt
ORE/ORE_full/OREAnalytics/Calibration/: CMakeLists.txt  CurveCalibrate.cpp  CurveCalibrate.h  main.cpp
ORE/ORE_full/OREAnalytics/orea/: CMakeLists.txt  orea.hpp
ORE/ORE_full/OREAnalytics/test/: CMakeLists.txt  aggregationscenariodata.cpp  cube.cpp  observationmode.cpp  scenariogenerator.cpp  scenariosimmarket.cpp  sensitivityanalysis.cpp  swapperformance.cpp
ORE/ORE_full/OREData/test/: CMakeLists.txt  bond.cpp  ccyswapwithresets.cpp  cds.cpp  cms.cpp  commoditycurve.cpp  commodityoption.cpp  commodityvolcurve.cpp  cpiswap.cpp  digitalcms.cpp  equityswap.cpp  equitytrades.cpp  fxoption.cpp  fxswap.cpp  fxtriangulation.cpp  inflationcapfloor.cpp  legdata.cpp  log.org.file.txt  mxnircurves.cpp  ored_commodityforward.cpp  swaption.cpp  todaysmarket.cpp  xmlmanipulation.cpp  zerocouponswap.cpp
ORE/ORE_full/QuantExt/: Makefile  Makefile.in  config.status  configure  libtool
ORE/ORE_full/QuantExt/autom4te.cache/: output.1  requests  traces.0  traces.1  traces.2
ORE/ORE_full/QuantExt/doc/: Makefile  Makefile.in
ORE/ORE_full/QuantExt/m4/: Makefile  Makefile.in
ORE/ORE_full/QuantExt/qle/: Makefile  Makefile.in  config.hpp  config.hpp.in  stamp-h1
ORE/ORE_full/QuantExt/test/: CMakeLists.txt  Makefile  Makefile.in  blackvariancecurve.cpp  blackvariancesurfacesparse.cpp  bonds.cpp  cashflow.cpp  correlationtermstructure.cpp  cpicapfloor.cpp  crossassetmodel.cpp  crossassetmodel2.cpp  crossassetmodelparametrizations.cpp  crossccybasismtmresetswap.cpp  crossccybasismtmresetswaphelper.cpp  crossccyfixfloatswap.cpp  crossccyfixfloatswaphelper.cpp  deltagammavar.cpp  discountcurve.cpp  discountingcommodityforwardengine.cpp  dynamicblackvoltermstructure.cpp  dynamicswaptionvolmatrix.cpp  interpolatedyoycapfloortermpricesurface.cpp  optionletstripper.cpp  payment.cpp  pricecurve.cpp  pricetermstructureadapter.cpp  strippedoptionletadapter.cpp  survivalprobabilitycurve.cpp  swaptionmarketdata.hpp  swaptionvolatilityconverter.cpp  swaptionvolconstantspread.cpp  utilities.hpp
ORE/ORE_full/QuantLib/: .gitignore  CMakeLists.txt
ORE/ORE_full/QuantLib/ql/: config.sun.hpp  errors.hpp  interestrate.cpp  interestrate.hpp  timegrid.hpp  types.hpp
ORE/ORE_full/ThirdPartyLibs/: LBFGS_old.h
ORE/ORE_full/ThirdPartyLibs/LBFGSpp/: BFGSMat.h  LineSearchBacktracking_old.h  LineSearchMoreThuente.h  Param.h
ORE/ORE_full/cmake/: commonSettings.cmake
(+349 files in other folders)
